--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/vscode/devcontainers/python:3.10
 # Install system dependencies
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
+    python3-pip \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # Set the working directory in the container
@@ -12,3 +13,6 @@ WORKDIR /workspace
 COPY requirements.txt /workspace
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
+
+# Set the user to vscode
+USER vscode
