--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,12 +2,12 @@
     "name": "Python Dev Container",
     "build": {
         "dockerfile": "Dockerfile",
-        "context": ".devcontainer"
+        "context": "."
     },
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
-    "postCreateCommand": "pip install --upgrade pip && pip install -r requirements.txt",
+    "postCreateCommand": "pip install -r requirements.txt",
     "remoteUser": "vscode",
     "extensions": [
         "ms-python.python"
