--- a/Netzwerksniffer/.devcontainer/Dockerfile
+++ b/Netzwerksniffer/.devcontainer/Dockerfile
@@ -1,21 +1,32 @@
-# Use a base image with Python 3.10
+# Verwenden eines Basis-Images mit Python 3.10
 FROM mcr.microsoft.com/vscode/devcontainers/python:3.10
 
-# Install system dependencies
+# Installieren von Systemabhängigkeiten
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends gcc python3-dev musl-dev \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Set the working directory in the container
+# Setzen des Arbeitsverzeichnisses im Container
 WORKDIR /workspace
 
-# Copy requirements.txt and install Python dependencies
+# Kopieren der requirements.txt in das Arbeitsverzeichnis
 COPY requirements.txt /workspace/
+
+# Sicherstellen, dass pip installiert und aktualisiert ist
 RUN python -m ensurepip --upgrade
+
+# Aktualisieren von pip, setuptools und wheel
 RUN pip install --upgrade pip setuptools wheel
+
+# Installieren der Abhängigkeiten aus der requirements.txt
 RUN pip install -r requirements.txt
 
-# Debugging outputs
+# Debugging-Ausgaben:
+# Ausgabe der installierten Python-Version
 RUN python --version
+
+# Ausgabe der installierten pip-Version
 RUN pip --version
+
+# Ausgabe der installierten Python-Pakete
 RUN pip list
